# rusty_chat_ws_async

./: Cargo.toml  README.md
common_lib/: Cargo.toml
common_lib/src/: lib.rs
ws-client/: Cargo.toml
ws-client/src/: gui.rs  gui_user.rs  lib.rs  main.rs  ws_handler.rs
ws-server/: Cargo.toml
ws-server/src/: main.rs  ws_handler.rs
