[package]
name = "ws-client"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {version =  "0.12", features = ["advanced"]}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "*"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
common_lib = { path = "../common_lib" }